Object[]查询结果改为Tuple